--- a/Front End Assets/html/home-hero.html
+++ b/Front End Assets/html/home-hero.html
@@ -27,10 +27,11 @@
 </div></header>
 
         <div class="page-content">
-            <div class="rif-book"></div>
             
 
-<div class="home-hero">
+<div class="home-hero module">
+
+    <div class="rif-book"></div> 
 
     <div class="row">
         <div class="wrapper">
