--- a/Front End Assets/html/modules/home-hero.html
+++ b/Front End Assets/html/modules/home-hero.html
@@ -2,7 +2,9 @@
 
 {% block content %}
 
-<div class="home-hero">
+<div class="home-hero module">
+
+    {% include "partials/rif-book.html" %} 
 
     <div class="row">
         <div class="wrapper">
