--- a/Front End Assets/html/modules/text-image-video-hero.html
+++ b/Front End Assets/html/modules/text-image-video-hero.html
@@ -4,7 +4,7 @@
 
 <div class="text-image-video-hero module">
 
-    <div class="rif-book"></div>
+    {% include "partials/rif-book.html" %} 
 
     <div class="row">
         <div class="wrapper">
