three column callout refactor

--- a/Front End Assets/html/modules/three-column-callout.html
+++ b/Front End Assets/html/modules/three-column-callout.html
@@ -8,33 +8,29 @@
 
     <h1 class="rif-book-margin-top">Support RIF Chicago</h1>
 
-    <div class="intro-copy">
+    <div class="intro-copy lg-sm-container">
         <div>
             <p>We believe every child deserves the chance to own and love books. As a nonprofit, our programs are supported entirely by generous donations from individuals, companies, foundations, and social organizations. Thank you for keeping our kids reading!</p>
         </div>
     </div>
 
-    <div class="row">
-        <div class="column-container">
-            <div class="three-equal-col">
-                <div class="column-content">
-                    <h2>Donate a Book</h2>
-                    <p>Help kids by donating a book they'll love.</p>
-                    <a href="#" aria-label="Give Now" class="btn green">Give Now</a>
-                </div>
-                <div class="column-content">
-                    <h2>Fund a Library</h2>
-                    <p>Buy the books to build a classroom library.</p>
-                    <a href="#" aria-label="Give Now" class="btn green">Give Now</a>
-                </div>
-                <div class="column-content">
-                    <h2>Become a Partner</h2>
-                    <p>Bring a year of books and events to one underserved school.</p>
-                    <a href="#" aria-label="Give Now" class="btn green">Give Now</a>
-                </div>
-            </div><!--/.three-equal-col--->
-        </div><!-- /.column-container-->
-    </div><!-- /.row-->
+    <div class="three-equal-col">
+        <div>
+            <h2>Donate a Book</h2>
+            <p>Help kids by donating a book they'll love.</p>
+            <a href="#" aria-label="Give Now" class="btn green">Give Now</a>
+        </div>
+        <div>
+            <h2>Fund a Library</h2>
+            <p>Buy the books to build a classroom library.</p>
+            <a href="#" aria-label="Give Now" class="btn green">Give Now</a>
+        </div>
+        <div>
+            <h2>Become a Partner</h2>
+            <p>Bring a year of books and events to one underserved school.</p>
+            <a href="#" aria-label="Give Now" class="btn green">Give Now</a>
+        </div>
+    </div>
 
 </div><!-- /.three-column-callout -->
 {% endblock %}
