--- a/Front End Assets/html/modules/timeline.html
+++ b/Front End Assets/html/modules/timeline.html
@@ -9,17 +9,19 @@
     <h1 class="rif-book-margin-top">Our Progress</h1>
 
     <div class="timeline-wrapper">
-        
-        <div class="top two-equal-col">
-            <div class="left">
-                1972
-            </div>
-            <div class="right">
-                Today
-            </div>
-        </div>
 
-        <hr/>
+        <div class="small-container">
+            <div class="top two-equal-col">
+                <div class="left">
+                    1972
+                </div>
+                <div class="right">
+                    Today
+                </div>
+            </div>
+
+            <hr />
+        </div>
 
         <div class="bottom three-equal-col">
             <div class="left">
@@ -36,22 +38,22 @@
             </div>
         </div>
 
-        <!-- optional images --> 
+        <!-- optional images -->
         <div class="image-collage">
             <div class="img-overlay purple">
-                <img src="../images/cms/timeline-photos-210x200.jpg"/>
+                <img src="../images/cms/timeline-photos-210x200.jpg" />
             </div>
             <div class="img-overlay white">
-                <img src="../images/cms/timeline-photos-295x215.jpg"/>
+                <img src="../images/cms/timeline-photos-295x215.jpg" />
             </div>
             <div class="img-overlay blue">
-                <img src="../images/cms/timeline-photos-165x200.jpg"/>
+                <img src="../images/cms/timeline-photos-165x200.jpg" />
             </div>
-            <div class="img-overlay green"> 
-                <img src="../images/cms/timeline-photos-305x215.jpg"/>
+            <div class="img-overlay green">
+                <img src="../images/cms/timeline-photos-305x215.jpg" />
             </div>
             <div class="square img-overlay orange">
-                <img src="../images/cms/timeline-photos-162x162.jpg" /> 
+                <img src="../images/cms/timeline-photos-162x162.jpg" />
             </div>
         </div>
 
@@ -59,5 +61,4 @@
 
 
 </div><!-- /.timeline -->
-
 {% endblock %}
