--- a/Front End Assets/html/community.html
+++ b/Front End Assets/html/community.html
@@ -29,53 +29,6 @@
         <div class="page-content">
             
 
-<div class="home-hero module">
-
-    <div class="rif-book"></div> 
-
-    <div class="row">
-        <div class="wrapper">
-            <div class="top-circle">
-                <div class="circle-img blue medium">
-                    <img src="../images/cms/circle-img-test-2.jpg" alt="Image Alt" />
-                </div>
-            </div><!-- .top-circle -->
-
-            <h1>Changing the Lives of Chicago's Children Through the Power of Books.</h1>
-
-            <div class="bottom-circles">
-                <div class="left">
-                    <div class="circle-img green small">
-                        <img src="../images/cms/circle-img-test-2.jpg" alt="Image Alt" />
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="circle-img orange large">
-                        <img src="../images/cms/circle-img-test.jpg" alt="Image Alt" />
-                    </div>
-                </div>
-            </div><!-- /.bottom-circles-->
-
-        </div><!-- /.wrapper -->
-    </div><!-- /.row -->
-
-    <div class="donation">
-        <h3>Give Monthly</h3>
-        <div class="rif-form">
-            <span>
-                <span>$</span>
-                <input type="text" placeholder="Per Month" />
-            </span>
-            <span>                
-                <input type="text" placeholder="Something" />
-            </span>
-        </div>
-    </div>
-
-    <div class="donation-note">A new book not only brings joy - it helps end the cycle of poverty. You can change lives today by giving the gift that lasts a lifetime.</div>
-
-</div><!-- /.home-hero -->
-
 <div class="text-image-video-hero module">
 
     <div class="rif-book"></div> 
@@ -129,115 +82,86 @@
     </div><!-- /.row -->
 </div><!-- /.text-image-video-hero -->
 
-<div class="timeline module">
+<div class="text-with-circle-images module">
 
-    <div class="rif-book"></div>
+    <div class="row">
 
-    <h1 class="rif-book-margin-top">Our Progress</h1>
-
-    <div class="timeline-wrapper">
-
-        <div class="small-container">
-            <div class="top two-equal-col">
-                <div class="left">
-                    1972
-                </div>
-                <div class="right">
-                    Today
-                </div>
+        <div class="images">
+            <div class="circle-img green small">
+                <img src="../images/cms/circle-img-test-2.jpg" alt="Image Alt"/>
             </div>
-
-            <hr />
-        </div>
-
-        <div class="bottom three-equal-col">
-            <div class="left">
-                <h3>4,000,000</h3>
-                <h5>New Books Distributed</h5>
-            </div>
-            <div class="middle">
-                <h3>48,000</h3>
-                <h5>Children Reached Annually</h5>
-            </div>
-            <div class="right">
-                <h3>94</h3>
-                <h5>Chicago Schools Served</h5>
+            <div class="circle-img orange large">
+                <img src="../images/cms/circle-img-test.jpg" alt="Image Alt" />
             </div>
         </div>
 
-        <!-- optional images -->
-        <div class="image-collage">
+        <div class="content">
+            <h3>Englewood Initiative</h3>
+            <p>Cras mattis consectetur purus sit amet fermentum. Donec sed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
+        </div>
+
+    </div><!--/.row -->
+</div><!-- /.text-with-circle-images -->
+
+
+<div class="text-left-image-right module">
+
+    <div class="row">
+
+        <div class="content">
+            <div>
+                <h3>Adolescents at Risk</h3>
+                <p>Cras mattis consectetur purus sit amet fermentum. Donec sed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
+            </div>
+        </div>
+
+        <div class="image">
+            <!-- class changes the color: orange, blue, green, white, purple -->
             <div class="img-overlay purple">
-                <img src="../images/cms/timeline-photos-210x200.jpg" />
-            </div>
-            <div class="img-overlay white">
-                <img src="../images/cms/timeline-photos-295x215.jpg" />
-            </div>
-            <div class="img-overlay blue">
-                <img src="../images/cms/timeline-photos-165x200.jpg" />
-            </div>
-            <div class="img-overlay green">
-                <img src="../images/cms/timeline-photos-305x215.jpg" />
-            </div>
-            <div class="square img-overlay orange">
-                <img src="../images/cms/timeline-photos-162x162.jpg" />
+                <img src="../images/cms/placeholder-image.jpg"/>
             </div>
         </div>
 
-    </div><!-- /.timeline-wrapper -->
+    </div><!--/.row -->
+</div><!-- /.text-left-image-right -->
 
+<div class="content-callout-hero module">
+    <div class="row">
+        <div class="image-wrapper">
+            <img src="../images/cms/content-callout-hero-placeholder.jpg" alt="Image Title" />
+        </div><!-- /.wrapper -->
+    </div><!-- /.row -->
 
-</div><!-- /.timeline -->
+    <div class="content">
+        <div class="row">
+            <div class="content-wrapper">
+                <h3>Southside Zine</h3>
+                <p>Etiam porta sem malesuada magna mollis euismod. Maecenas sed diam eget risus varius blandit sit amet non magna. Fermentum massa justo sit amet risus.</p>
+            </div>
+        </div>       
+    </div><!-- /.content -->
+</div><!-- /.content-callout-hero -->
 
-<div class="three-column-callout module">
+<div class="text-with-circle-images module">
 
-    <div class="rif-book"></div>
+    <div class="row">
 
-    <h1 class="rif-book-margin-top">Support RIF Chicago</h1>
-
-    <div class="intro-copy lg-sm-container">
-        <div>
-            <p>We believe every child deserves the chance to own and love books. As a nonprofit, our programs are supported entirely by generous donations from individuals, companies, foundations, and social organizations. Thank you for keeping our kids reading!</p>
+        <div class="images">
+            <div class="circle-img green small">
+                <img src="../images/cms/circle-img-test-2.jpg" alt="Image Alt"/>
+            </div>
+            <div class="circle-img orange large">
+                <img src="../images/cms/circle-img-test.jpg" alt="Image Alt" />
+            </div>
         </div>
-    </div>
 
-    <div class="three-equal-col">
-        <div>
-            <h2>Donate a Book</h2>
-            <p>Help kids by donating a book they'll love.</p>
-            <a href="#" aria-label="Give Now" class="btn green">Give Now</a>
+        <div class="content">
+            <h3>Englewood Initiative</h3>
+            <p>Cras mattis consectetur purus sit amet fermentum. Donec sed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
         </div>
-        <div>
-            <h2>Fund a Library</h2>
-            <p>Buy the books to build a classroom library.</p>
-            <a href="#" aria-label="Give Now" class="btn green">Give Now</a>
-        </div>
-        <div>
-            <h2>Become a Partner</h2>
-            <p>Bring a year of books and events to one underserved school.</p>
-            <a href="#" aria-label="Give Now" class="btn green">Give Now</a>
-        </div>
-    </div>
 
-</div><!-- /.three-column-callout -->
-
-<div class="three-column-image module">
-
-    <h5>Our Supporters</h5>
-
-    <div class="three-equal-col">
-        <div>
-            <img src="../images/cms/supporter-macy-logo.png" alt="Image Title"/>
-        </div>
-        <div>
-            <img src="../images/cms/supporter-aldi-logo.png" alt="Image Title" />
-        </div>
-        <div>
-            <img src="../images/cms/supporter-hpb-logo.png" alt="Image Title" />
-        </div>
-    </div>
-
-</div><!-- /.three-column-callout -->
+    </div><!--/.row -->
+</div><!-- /.text-with-circle-images -->
 
 
 
