updates for mobile, community page, home, donation page

--- a/Front End Assets/html/home-hero.html
+++ b/Front End Assets/html/home-hero.html
@@ -10,34 +10,47 @@
     <title>RIF Dev</title>
 </head>
 <body>
-    <div class="container page-wrapper">
 
-        <header><div class="logo-nav">
-    <div class="logo">
-        <a href="/"><img src="../images/rif-logo.png"/></a>
+    <header><div class="container">
+    <div class="logo-nav">
+        <div class="logo">
+            <a href="/">
+                <img src="../images/rif-logo.png" class="desktop" />
+                <img src="../images/rif-logo-mobile.png" class="mobile" />
+            </a>
+        </div>
+        <div class="mobile-nav-toggle">
+            <span></span>
+        </div>
+        <nav class="main-navigation">
+            <ul>
+                <li><a href="#" title="Programs and Initiatives">Programs and Initiatives</a></li>
+                <li><a href="#" title="Get Involved">Get Involved</a></li>
+                <li><a href="#" title="About Us">About Us</a></li>
+                <li class="button"><a href="#" title="Donate">Donate</a></li>
+            </ul>
+        </nav>
     </div>
-    <nav class="main-navigation">
-        <ul>
-            <li><a href="#" title="Programs and Initiatives">Programs and Initiatives</a></li>
-            <li><a href="#" title="Get Involved">Get Involved</a></li>
-            <li><a href="#" title="About Us">About Us</a></li>
-            <li class="button"><a href="#" title="Donate">Donate</a></li>
-        </ul>
-    </nav>
 </div></header>
+
+    <div class="container page-wrapper">
 
         <div class="page-content">
             
 
 <div class="home-hero module">
 
-    <div class="rif-book"></div> 
+    <div class="mobile-donate">
+        <a class="btn green" href="#" title="Donate">Donate</a>
+    </div>
+
+    <div class="rif-book"></div>
 
     <div class="row">
         <div class="wrapper">
             <div class="top-circle">
                 <div class="circle-img blue medium">
-                    <img src="../images/cms/circle-img-test-2.jpg" alt="Image Alt" />
+                    <img src="../images/cms/circle-img-test-2.jpg" alt="Image Alt"/>
                 </div>
             </div><!-- .top-circle -->
 
@@ -46,12 +59,12 @@
             <div class="bottom-circles">
                 <div class="left">
                     <div class="circle-img green small">
-                        <img src="../images/cms/circle-img-test-2.jpg" alt="Image Alt" />
+                        <img src="../images/cms/circle-img-test-2.jpg" alt="Image Alt"/>
                     </div>
                 </div>
                 <div class="right">
                     <div class="circle-img orange large">
-                        <img src="../images/cms/circle-img-test.jpg" alt="Image Alt" />
+                        <img src="../images/cms/circle-img-test.jpg" alt="Image Alt"/>
                     </div>
                 </div>
             </div><!-- /.bottom-circles-->
@@ -77,23 +90,6 @@
 </div><!-- /.home-hero -->
 
 
-        </div>
-
-        <!-- top footer, repeat of header with background image -->
-        <div class="footer-nav-wrapper" style="background-image: url('../images/CMS/footer-bg.jpg')">
-            <footer><div class="logo-nav">
-    <div class="logo">
-        <a href="/"><img src="../images/rif-logo.png"/></a>
-    </div>
-    <nav class="main-navigation">
-        <ul>
-            <li><a href="#" title="Programs and Initiatives">Programs and Initiatives</a></li>
-            <li><a href="#" title="Get Involved">Get Involved</a></li>
-            <li><a href="#" title="About Us">About Us</a></li>
-            <li class="button"><a href="#" title="Donate">Donate</a></li>
-        </ul>
-    </nav>
-</div></footer>
         </div>
 
         <!-- bottom footer -->
@@ -147,6 +143,8 @@
 
     <script src="../libs/jquery/jquery-1.12.1.min.js"></script>
     <script src="../libs/bootstrap/javascripts/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css"> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script data-main="../scripts/rif-main" src="../scripts/require.js"></script>
 </body>
 </html>
