--- a/Front End Assets/html/three-column-circle-image-text.html
+++ b/Front End Assets/html/three-column-circle-image-text.html
@@ -38,59 +38,42 @@
         <div class="page-content">
             
 
-<div class="text-image-video-hero module">
+<br />
+<br />
+<br />
+<br />
 
-    <div class="rif-book"></div> 
+<div class="three-column-circle-image-text module">
 
-    <div class="row">
-        <div class="wrapper">
-            <!-- changing classes here can change background color: need to determine choices here -->
-            <div class="bg-blue">
-                <div class="clearfix">
-                    <div class="left">
-                        <h5>Our Mission</h5>
-                        <h1>For At Risk Kids, Literacy Brings Hope.</h1>
-                        <p>When you give books to children, magic happens. Eyes sparkle, smiles emerge, and new possibilities come to light for the first time. Our mission is to inspire a life-changing love of learning through reading. We do this by providing a choice of new, high-quality, and culturally relevant books to kids who need them the most.</p>
-                    </div>
-                    <div class="right">
-                        
-                        <!-- they could place a video (modal) or an image here -->
+    <div class="rif-book"></div>
 
-                        <!-- if image:
-                        <div class="img-wrapper">
-                            <img src="../images/cms/text-image-hero.jpg"/>
-                        </div>
-                        --> 
+    <h1 class="rif-book-margin-top">Why Reading Matters</h1>
 
-                        <!-- if video: -->
-                        <div class="img-wrapper video-thumb"> 
-                            <img src="../images/cms/text-image-hero.jpg"/>
-                            <i class="play" data-toggle="modal" data-target="#videoModal"></i>
-                        </div><!-- /.video-thumb -->
-                        <!-- VIDEO IS IN A MODAL: needs guid id in case there is more than one per page (and see above data-target, needs to match) -->
-                        <div id="videoModal" class="modal video" tabindex="-1" role="dialog">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <span class="close" data-dismiss="modal" aria-label="Close"></span>
-                                    </div>
-                                    <div class="modal-body">
-                                        <div class="responsive-iframe">
-    <iframe src="https://www.youtube.com/embed/tLt5rBfNucc" frameborder="0" allowfullscreen></iframe>
-</div>
-                                    </div>
-                                </div><!-- /.modal-content -->
-                            </div><!-- /.modal-dialog -->
-                        </div><!-- /.modal -->
+    <div class="three-equal-col">
+        <div>
+            <div class="circle-img large white">
+                <img src="../images/cms/three-col-circle-img.jpg" alt="Image Title" />
+            </div>
+            <h3>93 Million of U.S. Adults</h3>
+            <p>read at or below the basic level needed to contribute successfully to society.</p>
+        </div>
+        <div>
+            <div class="circle-img large purple">
+                <img src="../images/cms/three-col-circle-img.jpg" alt="Image Title" />
+            </div>
+            <h3>47% of 4th Graders </h3>
+            <p>from low-income families scored below the basic reading level on the National Assessment of Educational Progress (NAEP).</p>
+        </div>
+        <div>
+            <div class="circle-img large blue">
+                <img src="../images/cms/three-col-circle-img.jpg" alt="Image Title" />
+            </div>
+            <h3>61% of Low Income Families</h3>
+            <p>have no books in their homes, attend schools with no libraries, and have limited access to public libraries, resulting in absenteeism and lower high school graduation rates.</p>
+        </div>
+    </div>
 
-
-                    </div><!-- /.right -->
-                </div><!-- /.clearfix -->
-            </div><!-- /bg -->
-        </div><!-- /.wrapper -->
-    </div><!-- /.row -->
-</div><!-- /.text-image-video-hero -->
-
+</div><!-- /.three-column-callout -->
 
         </div>
 
