--- a/Front End Assets/html/timeline.html
+++ b/Front End Assets/html/timeline.html
@@ -10,21 +10,30 @@
     <title>RIF Dev</title>
 </head>
 <body>
-    <div class="container page-wrapper">
 
-        <header><div class="logo-nav">
-    <div class="logo">
-        <a href="/"><img src="../images/rif-logo.png"/></a>
+    <header><div class="container">
+    <div class="logo-nav">
+        <div class="logo">
+            <a href="/">
+                <img src="../images/rif-logo.png" class="desktop" />
+                <img src="../images/rif-logo-mobile.png" class="mobile" />
+            </a>
+        </div>
+        <div class="mobile-nav-toggle">
+            <span></span>
+        </div>
+        <nav class="main-navigation">
+            <ul>
+                <li><a href="#" title="Programs and Initiatives">Programs and Initiatives</a></li>
+                <li><a href="#" title="Get Involved">Get Involved</a></li>
+                <li><a href="#" title="About Us">About Us</a></li>
+                <li class="button"><a href="#" title="Donate">Donate</a></li>
+            </ul>
+        </nav>
     </div>
-    <nav class="main-navigation">
-        <ul>
-            <li><a href="#" title="Programs and Initiatives">Programs and Initiatives</a></li>
-            <li><a href="#" title="Get Involved">Get Involved</a></li>
-            <li><a href="#" title="About Us">About Us</a></li>
-            <li class="button"><a href="#" title="Donate">Donate</a></li>
-        </ul>
-    </nav>
 </div></header>
+
+    <div class="container page-wrapper">
 
         <div class="page-content">
             
@@ -33,54 +42,57 @@
 
     <div class="rif-book"></div>
 
-    <h1 class="rif-book-margin-top">Our Progress</h1>
+    <h1 class="rif-book-margin-top">Our Progress</h1> 
 
     <div class="timeline-wrapper">
+        <div class="row">
+            
+            <div class="year-container">
+                <div class="top two-equal-col">
+                    <div class="left">
+                        1972
+                    </div>
+                    <div class="right">
+                        Today
+                    </div>
+                </div>
 
-        <div class="small-container">
-            <div class="top two-equal-col">
+                <hr/>
+            </div>
+
+            <div class="bottom three-equal-col">
                 <div class="left">
-                    1972
+                    <h3>4,000,000</h3>
+                    <h5>New Books Distributed</h5>
+                </div>
+                <div class="middle">
+                    <h3>48,000</h3>
+                    <h5>Children Reached Annually</h5>
                 </div>
                 <div class="right">
-                    Today
+                    <h3>94</h3>
+                    <h5>Chicago Schools Served</h5>
                 </div>
             </div>
 
-            <hr />
-        </div>
-
-        <div class="bottom three-equal-col">
-            <div class="left">
-                <h3>4,000,000</h3>
-                <h5>New Books Distributed</h5>
-            </div>
-            <div class="middle">
-                <h3>48,000</h3>
-                <h5>Children Reached Annually</h5>
-            </div>
-            <div class="right">
-                <h3>94</h3>
-                <h5>Chicago Schools Served</h5>
-            </div>
-        </div>
+        </div><!-- /.row -->
 
         <!-- optional images -->
         <div class="image-collage">
-            <div class="img-overlay purple">
-                <img src="../images/cms/timeline-photos-210x200.jpg" />
-            </div>
-            <div class="img-overlay white">
-                <img src="../images/cms/timeline-photos-295x215.jpg" />
-            </div>
-            <div class="img-overlay blue">
-                <img src="../images/cms/timeline-photos-165x200.jpg" />
-            </div>
-            <div class="img-overlay green">
-                <img src="../images/cms/timeline-photos-305x215.jpg" />
-            </div>
             <div class="square img-overlay orange">
                 <img src="../images/cms/timeline-photos-162x162.jpg" />
+            </div>
+            <div class="img-overlay purple">
+                <img src="../images/cms/timeline-photos-210x200.jpg"/>
+            </div>
+            <div class="img-overlay white">
+                <img src="../images/cms/timeline-photos-295x215.jpg"/>
+            </div>
+            <div class="img-overlay blue">
+                <img src="../images/cms/timeline-photos-165x200.jpg"/>
+            </div>
+            <div class="img-overlay green">
+                <img src="../images/cms/timeline-photos-305x215.jpg"/>
             </div>
         </div>
 
@@ -89,23 +101,6 @@
 
 </div><!-- /.timeline -->
 
-        </div>
-
-        <!-- top footer, repeat of header with background image -->
-        <div class="footer-nav-wrapper" style="background-image: url('../images/CMS/footer-bg.jpg')">
-            <footer><div class="logo-nav">
-    <div class="logo">
-        <a href="/"><img src="../images/rif-logo.png"/></a>
-    </div>
-    <nav class="main-navigation">
-        <ul>
-            <li><a href="#" title="Programs and Initiatives">Programs and Initiatives</a></li>
-            <li><a href="#" title="Get Involved">Get Involved</a></li>
-            <li><a href="#" title="About Us">About Us</a></li>
-            <li class="button"><a href="#" title="Donate">Donate</a></li>
-        </ul>
-    </nav>
-</div></footer>
         </div>
 
         <!-- bottom footer -->
@@ -159,6 +154,8 @@
 
     <script src="../libs/jquery/jquery-1.12.1.min.js"></script>
     <script src="../libs/bootstrap/javascripts/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css"> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script data-main="../scripts/rif-main" src="../scripts/require.js"></script>
 </body>
 </html>
