--- a/Front End Assets/html/modules/home-hero.html
+++ b/Front End Assets/html/modules/home-hero.html
@@ -4,13 +4,17 @@
 
 <div class="home-hero module">
 
-    {% include "partials/rif-book.html" %} 
+    <div class="mobile-donate">
+        <a class="btn green" href="#" title="Donate">Donate</a>
+    </div>
+
+    {% include "partials/rif-book.html" %}
 
     <div class="row">
         <div class="wrapper">
             <div class="top-circle">
                 <div class="circle-img blue medium">
-                    <img src="../images/cms/circle-img-test-2.jpg" alt="Image Alt" />
+                    <img src="../images/cms/circle-img-test-2.jpg" alt="Image Alt"/>
                 </div>
             </div><!-- .top-circle -->
 
@@ -19,12 +23,12 @@
             <div class="bottom-circles">
                 <div class="left">
                     <div class="circle-img green small">
-                        <img src="../images/cms/circle-img-test-2.jpg" alt="Image Alt" />
+                        <img src="../images/cms/circle-img-test-2.jpg" alt="Image Alt"/>
                     </div>
                 </div>
                 <div class="right">
                     <div class="circle-img orange large">
-                        <img src="../images/cms/circle-img-test.jpg" alt="Image Alt" />
+                        <img src="../images/cms/circle-img-test.jpg" alt="Image Alt"/>
                     </div>
                 </div>
             </div><!-- /.bottom-circles-->
