updated HTML pages, removed unnecessary modules markup, everything is in templates/partial. updated readme

--- a/Front End Assets/html/donation.html
+++ b/Front End Assets/html/donation.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" />
 
     <link href='https://fonts.googleapis.com/css?family=Poppins:400,500,300' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css"> 
     <link href="../css/rif.css" rel="stylesheet" />
 
     <title>RIF Dev</title>
@@ -38,7 +39,97 @@
         <div class="page-content">
             
  
+<div class="donation module">
 
+    <div class="rif-book"></div>
+
+    <h1 class="rif-book-margin-top">Love Books?<br>Help kids love them too.</h1>
+
+    <div class="intro-copy lg-sm-container">
+        <div>
+            <p>$10 will provide books to 12 of our community's most at risk children.</p>
+        </div>
+    </div>
+
+    <div id="tabs" class="rif-form">
+        <ul class="row">
+            <li class="col-md-4"><a href="#tabs-1">Donate a Book</a></li>
+            <li class="col-md-4"><a href="#tabs-2">Fund a Library</a></li>
+            <li class="col-md-4"><a href="#tabs-3">Become a Partner</a></li>
+        </ul>
+        <div id="tabs-1">
+            <div class="row">
+                <div class="col-md-4">
+                    <a href="#">$10</a>
+                </div>
+                <div class="col-md-4">
+                    <a href="#">$25</a>
+                </div>
+                <div class="col-md-4">
+                    <a href="#">$50</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 other-amount">
+                    <span class="cash">$</span><input type="text" name="Other Amount" placeholder="OTHER AMOUNT">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 donate-button">
+                    <a href="#" class="give" title="Donate">Give</a>
+                </div>
+            </div>
+        </div>
+
+        <div id="tabs-2">
+            <div class="row">
+                <div class="col-md-4">
+                    <a href="#">$10</a>
+                </div>
+                <div class="col-md-4">
+                    <a href="#">$25</a>
+                </div>
+                <div class="col-md-4">
+                    <a href="#">$50</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 other-amount">
+                    <span class="cash">$</span><input type="text" name="Other Amount" placeholder="OTHER AMOUNT">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 donate-button">
+                    <a href="#" class="give" title="Donate">Give</a>
+                </div>
+            </div>
+        </div>
+
+        <div id="tabs-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <a href="#">$10</a>
+                </div>
+                <div class="col-md-4">
+                    <a href="#">$25</a>
+                </div>
+                <div class="col-md-4">
+                    <a href="#">$50</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 other-amount">
+                    <span class="cash">$</span><input type="text" name="Other Amount" placeholder="OTHER AMOUNT">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 donate-button">
+                    <a href="#" class="give" title="Donate">Give</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div><!-- /.donation -->
  
 
         </div>
@@ -94,7 +185,6 @@
 
     <script src="../libs/jquery/jquery-1.12.1.min.js"></script>
     <script src="../libs/bootstrap/javascripts/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css"> 
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script data-main="../scripts/rif-main" src="../scripts/require.js"></script>
 </body>
