--- a/Front End Assets/html/pages/home.html
+++ b/Front End Assets/html/pages/home.html
@@ -2,11 +2,11 @@
 
 {% block content %}
  
-{% include "partials/page-modules/home-hero.html" %}  
-{% include "partials/page-modules/text-image-video-hero.html" %}
-{% include "partials/page-modules/three-column-circle-image-text.html" %}
-{% include "partials/page-modules/timeline.html" %} 
-{% include "partials/page-modules/three-column-callout.html" %}
-{% include "partials/page-modules/three-column-image.html" %}
+{% include "partials/home-hero.html" %}  
+{% include "partials/text-image-video-hero.html" %}
+{% include "partials/three-column-circle-image-text.html" %}
+{% include "partials/timeline.html" %} 
+{% include "partials/three-column-callout.html" %}
+{% include "partials/three-column-image.html" %}
  
-{% endblock %}   
+{% endblock %}    
