--- a/Front End Assets/html/pages/programs.html
+++ b/Front End Assets/html/pages/programs.html
@@ -1,7 +1,7 @@
 {% extends "shell.html" %}
 
-{% block content %} 
- 
-{% include "partials/programs-grfefeefffid.html" %}   
+{% block content %}
+
+{% include "partials/programs-grid.html" %} 
 
 {% endblock %}    
