--- a/Front End Assets/html/programs.html
+++ b/Front End Assets/html/programs.html
@@ -37,8 +37,8 @@
     <div class="container page-wrapper">
 
         <div class="page-content">
-             
- 
+            
+
 <div class="programs-grid module">
 
     <div class="rif-book"></div>
@@ -48,38 +48,67 @@
     <div class="intro-copy lg-sm-container">
         <div>
             <p>We believe every child deserves the chance to own and love books. As a nonprofit, our programs are supported entirely by generous donations from individuals, companies, foundations.</p>
-        </div> 
-    </div> 
+        </div>
+    </div>
 
     <div class="three-equal-col">
+        <!-- repeat for each program -->
         <div>
-            <h3>Books for Ownership</h3>
-            <div class="img-overlay green">
-                <img src="../images/cms/timeline-photos-305x215.jpg">
+            <div class="border">
+                <h3>Books for Ownership</h3>
+                <!-- class will change color: green, orange, purple, white, blue -->
+                <div class="img-overlay green">
+                    <img src="../images/cms/timeline-photos-305x215.jpg">
+                </div>
+                <p>We partner with 95 schools thoughout Chicago to give kids the opportunity to own brand new books of their choosing.</p>
+                <a href="#" aria-label="Read More" class="btn green">Read More</a>
             </div>
-            <p>We partner with 95 schools thoughout Chicago to give kids the opportunity to own brand new books of their choosing.</p>
-            <a href="#" aria-label="Read More" class="btn green">Read More</a>
+        </div>
+        <!-- end for each program -->
+        <div>
+            <div class="border">
+                <h3>Books for Ownership</h3>
+                <div class="img-overlay orange">
+                    <img src="../images/cms/timeline-photos-305x215.jpg">
+                </div>
+                <p>We provide books in the waiting rooms of Lurie Children's Hospital and the James A. Lovell VA Healthcare Pediatric Clinic to ease the stress they may be feeling.</p>
+                <a href="#" aria-label="Read More" class="btn green">Read More</a>
+            </div>
         </div>
         <div>
-            <h3>Books for Ownership</h3>
-            <div class="img-overlay orange">
-                <img src="../images/cms/timeline-photos-305x215.jpg">
+            <div class="border">
+                <h3>Books for Ownership</h3>
+                <div class="img-overlay white">
+                    <img src="../images/cms/timeline-photos-305x215.jpg">
+                </div>
+                <p>We partner with 95 schools thoughout Chicago to give kids the opportunity to own brand new books of their choosing.</p>
+                <a href="#" aria-label="Read More" class="btn green">Read More</a>
             </div>
-            <p>We partner with 95 schools thoughout Chicago to give kids the opportunity to own brand new books of their choosing.</p>
-            <a href="#" aria-label="Read More" class="btn green">Read More</a>
         </div>
         <div>
-            <h3>Books for Ownership</h3>
-            <div class="img-overlay white">
-                <img src="../images/cms/timeline-photos-305x215.jpg">
+            <div class="border">
+                <h3>Books for Ownership</h3>
+                <div class="img-overlay white">
+                    <img src="../images/cms/timeline-photos-305x215.jpg">
+                </div>
+                <p>We partner with 95 schools thoughout Chicago to give kids the opportunity to own brand new books of their choosing.</p>
+                <a href="#" aria-label="Read More" class="btn green">Read More</a>
             </div>
-            <p>We partner with 95 schools thoughout Chicago to give kids the opportunity to own brand new books of their choosing.</p>
-            <a href="#" aria-label="Read More" class="btn green">Read More</a>
+        </div>
+        <div>
+            <div class="border">
+                <h3>Books for Ownership</h3>
+                <div class="img-overlay white">
+                    <img src="../images/cms/timeline-photos-305x215.jpg">
+                </div>
+                <p>We partner with 95 schools thoughout Chicago to give kids the opportunity to own brand new books of their choosing.</p>
+                <a href="#" aria-label="Read More" class="btn green">Read More</a>
+            </div>
         </div>
     </div>
 
 </div><!-- /.three-column-callout -->
-   
+ 
 
 
         </div>
