Navigation updates, swapping programs and get involved

--- a/Front End Assets/html/pages/community.html
+++ b/Front End Assets/html/pages/community.html
@@ -2,10 +2,7 @@
 
 {% block content %}
 
-{% include "partials/large-text-image-video-hero.html" %}
-{% include "partials/text-with-circle-images.html" %}
-{% include "partials/text-left-image-right.html" %}
-{% include "partials/content-callout-hero.html" %} 
-{% include "partials/text-with-circle-images.html" %}
+{% include "partials/programs-grid.html" %} 
 
-{% endblock %}   
+{% endblock %}     
+
