--- a/Front End Assets/html/pages/programs.html
+++ b/Front End Assets/html/pages/programs.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 
-{% include "partials/programs-grid.html" %} 
+{% include "partials/large-text-image-video-hero.html" %}
+{% include "partials/text-with-circle-images.html" %}
+{% include "partials/text-left-image-right.html" %}
+{% include "partials/content-callout-hero.html" %} 
+{% include "partials/text-with-circle-images.html" %}
 
-{% endblock %}    
+{% endblock %}   
