Contests page - add freewall for masonry effect of gallery;  styled dropdown lists; hooked type dropdown to the gallery contents;  Still need to clean up code and put the styles and javascript in the right places

--- a/Front End Assets/html/contests.html
+++ b/Front End Assets/html/contests.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css"> 
     <link href="../css/rif.css" rel="stylesheet" />
 
-    <title>RIF Dev</title>
+    <title>Reading is Fundamental - Contests</title>
 </head>
 <body>
 
