about us page completed

--- a/Front End Assets/html/pages/about-us.html
+++ b/Front End Assets/html/pages/about-us.html
@@ -8,4 +8,8 @@
 
 {% include "partials/border-box-callout.html" %}
 
+{% include "partials/vertical-timeline.html" %}
+
+{% include "partials/content-callout-hero.html" %}
+
 {% endblock %}
