added article-preview partial and .scss for it

--- a/Front End Assets/html/pages/blog.html
+++ b/Front End Assets/html/pages/blog.html
@@ -4,4 +4,8 @@
 
 {% include "partials/full-width-hero.html" %}
 
+{% include "partials/article-preview.html" %}
+
+{% include "partials/article-preview.html" %}
+
 {% endblock %}
